--- a/css/nav.css
+++ b/css/nav.css
@@ -3,7 +3,7 @@ nav{
     height: 100vh;
     padding: 0 24px;
     background: #ffffff;
-    box-shadow: 3px 5px 2px rgba(0, 0, 0, 0.13);
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.16);
     position: fixed;
     left: 0;
     top: 0;
@@ -37,18 +37,15 @@ nav a:hover{
     cursor: pointer;
 }
 #menu span{
-    width: 15px;
+    width: 13px;
     display: block;
-    height: 3px;
+    height: 2px;
     background: #fff;
     margin: 3px 0;
     margin-left: auto;
 }
-#middleBor{
-    width: 22px !important;
-}
-.openNavMenu span{
-    width: 22px !important;
+#middleBor, .openNavMenu span{
+    width: 18px !important;
 }
 
 @media only screen and (max-width: 1000px){
@@ -59,9 +56,9 @@ nav a:hover{
         left: 0;
     }
     #menu span{
-        width: 22px;
+        width: 18px;
     }
     .openNavMenu span{
-        width: 16px !important;
+        width: 13px !important;
     }
 }
