--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
 body{
     margin: 0 0 0 288px;
     background: #f2f2f2;
@@ -20,11 +20,12 @@ button, .btn{
     color: #fff;
     border: none;
     background: #8bc34a;
-    padding: 10px;
+    padding: 8px;
     box-shadow: 4px 5px 3px rgba(0, 0, 0, 0.12);
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
+    font-size: 16px;
 }
 @media only screen and (max-width: 1000px){
     body{
