--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,10 @@ button, .btn{
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 16px;
+}
+a{
+    color: inherit;
+    text-decoration: none;
 }
 @media only screen and (max-width: 1000px){
     body{
