--- a/css/index.css
+++ b/css/index.css
@@ -46,3 +46,14 @@ h3{
 .red{
     background: red;
 }
+.addBtn{
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    color: #fff;
+    background: #4caf50;
+    padding: 12px;
+    border-radius: 32px;
+    font-weight: bold;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.16);
+}
