--- a/css/EditCreate.css
+++ b/css/EditCreate.css
@@ -59,3 +59,9 @@ input:focus{
     padding: 10px 10px 8px 10px;
     color: #000;
 }
+
+@media only screen and (max-width: 600px){
+    h1{
+        margin: 42px 0 32px 0;
+    }
+}
