--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,13 @@ button, .btn{
     color: #fff;
     border: none;
     background: #8bc34a;
-    padding: 8px;
-    box-shadow: 4px 5px 3px rgba(0, 0, 0, 0.12);
+    padding: 8px 12px;
     cursor: pointer;
     font-weight: bold;
     text-transform: uppercase;
+    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.16);
+    border-radius: 2px;
+    text-align: center;
 }
 a{
     color: inherit;
@@ -33,5 +35,10 @@ a{
 @media only screen and (max-width: 1000px){
     body{
         margin-left: 0 !important;
+    }
+}
+@media only screen and (max-width: 600px){
+    h1{
+        font-size: 26px;
     }
 }
