--- a/css/index.css
+++ b/css/index.css
@@ -40,14 +40,20 @@ h3{
 .marginlR{
     margin: 0 4px;
 }
+.todoBox .actions *{
+    padding: 12px;
+    color: #fff;
+    border-radius: 24px;
+    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.16);
+}
 .grey{
-    color: #9e9e9e;
+    background: #9e9e9e;
 }
 .red{
-    color: #f44336;
+    background: #f44336;
 }
 .green{
-    color: #8bc34a;
+    background: #8bc34a;
 }
 .addBtn{
     position: fixed;
@@ -61,10 +67,14 @@ h3{
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.16);
 }
 @media only screen and (max-width: 560px){
-    .btn{
-        font-size: 12px; 
-    }
     header{
         padding: 16px 16px 6px 16px;
+    }
+    .todoBox{
+        padding: 16px;
+    }
+    .todoBox .actions *{
+        padding: 11px;
+        font-size: 18px;
     }
 }
