--- a/css/styles.css
+++ b/css/styles.css
@@ -10,23 +10,11 @@ body{
     transition: ease-in 0.3s all;
     outline: none;
 }
-h2, h3{
+h3{
     color: #000;
 }
 .material-icons{
     cursor: pointer;
-}
-button, .btn{
-    color: #fff;
-    border: none;
-    background: #8bc34a;
-    padding: 8px 12px;
-    cursor: pointer;
-    font-weight: bold;
-    text-transform: uppercase;
-    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.16);
-    border-radius: 2px;
-    text-align: center;
 }
 a{
     color: inherit;
