--- a/css/EditCreate.css
+++ b/css/EditCreate.css
@@ -1,79 +1,81 @@
-body{
-    background: #4caf50;
-    color: #fff;
-    font-size: 16px;
+h1 {
+  text-align: center;
+  margin: 60px 0 42px 0;
 }
-*{
-    color: #fff;
+#alert {
+  width: 300px;
+  background: #8bc34a;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  color: #fff;
+  padding: 10px;
+  position: fixed;
+  right: 0;
+  z-index: 1;
+  top: -48px;
 }
-h1{
-    text-align: center;
-    margin: 60px 0 42px 0;
+form {
+  max-width: 700px;
+  margin: 0 auto;
 }
-input{
-    background: transparent;
-    border: none;
-    border-bottom: 2px solid;
-    display: block;
-    width: 100%;
-    padding: 9px 0 7px 0;
-    font-size: 14px;
-    box-sizing: border-box;
-    margin-top: 10px;
+button {
+  background: #8bc34a;
+  width: 100%;
+  border: none;
+  color: #000;
+  text-transform: uppercase;
+  padding: 10px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
 }
-form{
-    max-width: 700px;
-    margin: auto;
-    font-weight: bold;
-    width: 85%;
+.input-field {
+  position: relative;
+  margin-bottom: 30px;
 }
-label{
-    display: flex;
-    margin-bottom: 32px;
+input {
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  background: transparent;
+  border-bottom: 1px solid #9e9e9e;
+  font-size: 16px;
+  padding: 10px 0 8px 0;
+  transition-duration: 0.15s;
+  color: rgba(0, 0, 0, 0.8);
 }
-label div{
-    margin: 0 32px 0 12px;
-    flex-grow: 100;
+input:valid + label {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  font-size: 16px;
+  transition-duration: 0.15s;
+  cursor: text;
+  color: #9e9e9e;
 }
-label i{
-    margin-top: auto;
+input.filled,
+input:focus {
+  border-bottom: 2px solid #8bc34a;
 }
-button{
-    margin: 0 32px;
-    flex-grow: 100;
-    background: #fff;
-    color: rgba(0, 0, 0, 0.8);
-    border: none;
-    padding: 8px 12px;
-    cursor: pointer;
-    text-transform: uppercase;
-    box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.16);
-    border-radius: 2px;
+input.filled:valid + label,
+input:focus + label {
+  top: -16px;
+  font-size: 12px;
+  font-weight: normal;
+  color: #8bc34a;
 }
-#alert{
-    width: 300px;
-    background: #8bc34a;
-    font-weight: bold;
-    font-size: 16px;
-    text-align: center;
-    color: #fff;
-    padding: 10px;
-    position: fixed;
-    right: 0;
-    z-index: 1;
-    top: -48px;
+input.danger {
+  border-bottom: 2px solid #ef5350;
 }
-input:focus{
-    background: rgba(255, 255, 255, 0.8);
-    padding: 9px 10px 7px 10px;
-    color: #000;
+input.danger:valid + label{
+  color: #ef9a9a;
 }
-
-@media only screen and (max-width: 600px){
-    h1{
-        margin: 42px 0 32px 0;
-    }
-    label div{
-        margin: 0 30px 0 6px;
-    }
+#menu span{
+  background: #000;
+}
+@media only screen and (max-width:720px){
+  form{
+    margin: 0 24px;
+  }
 }
