--- a/css/index.css
+++ b/css/index.css
@@ -22,12 +22,12 @@ h3{
 }
 .check{
     border: 1px solid #9e9e9e;
-    padding: 0;
-    font-size: 14px !important;
+    padding: 1px;
     margin-right: 16px;
     color: #fff;
     font-weight: bold;
     border-radius: 2px;
+    font-size: 12px !important;
 }
 .checked{
     background: #8bc34a;
