--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 body{
     margin: 0 0 0 288px;
-    background: #f2f2f2;
+    background: rgb(250, 250, 250);
     font-size: 14px;
     color: rgba(0, 0, 0, 0.8);
 }
 *{
-    font-family: 'Open Sans', sans-serif;
     transition: ease-in 0.3s all;
     outline: none;
+    font-family: 'Roboto', sans-serif;
 }
-h3{
-    color: #000;
+h1, h3{
+    font-weight: normal;
 }
 .material-icons{
     cursor: pointer;
