--- a/src/components/View/View.css
+++ b/src/components/View/View.css
@@ -1,32 +1,24 @@
 .view h3{
     margin-bottom: 8px;
 }
+table{
+    width: 100%;
+    text-align: left;
+    overflow: auto;
+    min-width: 520px;
+    border-collapse: collapse;
+}
+th{
+    background: rgba(225, 245, 254,1);
+}
+th, td{
+    padding: 10px;
+}
 .basicInfo{
-    display: flex;
-    justify-content: space-between;
-    margin: 24px 0;
-}
-.basicInfo div{
-    width: 166px;
-    display: flex;
-    align-items: center;
-}
-.basicInfo h3{
-    margin: 0 12px 0 0;
+    overflow: auto;
 }
 @media only screen and (max-width: 600px){
-    .basicInfo{
-        display: block;
-        margin: 0;
-    }
-    .basicInfo span{
-        margin-top: auto;
-    }
-    .basicInfo div{
-        width: auto;
-        margin-bottom: 18px;
-    }
-    .basicInfo h3{
-        width: 90px;
+    th, td{
+        padding: 8px;
     }
 }
