--- a/src/components/Input/Input.css
+++ b/src/components/Input/Input.css
@@ -23,7 +23,7 @@ input{
     font-size: 15px;
     position: absolute;
 }
-.inputFocus p, .inputBlur p{
+.inputFocus p, .inputBlur p, .dateClass p{
     top: -18px;
     font-size: 12px;
     color: #8bc34a;
@@ -47,12 +47,16 @@ input[type="date"]::-webkit-clear-button{
     -webkit-appearance: none;
 }
 .dateClass p{
-    top: -18px !important;
-    font-size: 12px;
+    color: #9e9e9e;
 }
 input[type="date"]::-webkit-calendar-picker-indicator{
     width: 10px;
 }
 input[type="date"]{
     max-width: 261px;
+}
+@media only screen and (max-width: 500px){
+    input[type="date"]{
+        max-width: 100%;
+    }  
 }
